# tiny_util

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  output.txt  readme.txt  test.txt  tinyUtil.code-workspace
Debug/: test.txt
doc/algorithm/: 005_dfs.md  00_exam_excise.md  00_exam_solution.md  00_leetcode_c++.md  00_system_design.md  01_basic_ds_list.md  01_leetcode_c++.md  01_leetcode_note.md  02_binary_search.md  02_system_design.md  03_heap.md  03_heap_priority_queue_sort.md  04_monotonous_stack.md  05_disjoint_set_union.md  05_slide_window.md  06_prefix_sum.md  07_two_pointers.md  08_diffrence.md  09_disjoint_set_union.md  10_graph_alorithm.md  11_dfs.md  12_bfs.md  13_dp.md  subject2_01.md  subject2_02_todo_list.md  subject3_01.md  subject4_01.md  subject4_设计与重构.md
doc/bigdata/: 100_宽表.md
doc/dev_tool/: 01_c++_with_vscode.md  01_cmak_example1.md  01_cmake.md  01_gcc_use.md  01_java_with_idea.md  01_python_pycharm.md  02_markdown.md  02_short_key.md  03_linux_command.md  03_linux_shell.md  04_github_use.md  100_cmak_demo.md  100_cmake_use.md  100_gcc_use.md  100_gdb_use.md  102_shell_use.md  test.part01.rar  test2.z01  test2.z02  test2.z03  test2.z04  test2.z05  test2.z06  test2.z07  test2.z08  test2.z09  test2.z10  test2.z11  test2.z12  test2.z13  test2.z14  test2.z15  test2.z16  test2.z17  test2.z18  test2.z19  test_config.part01.rar  test_config.part02.rar  test_config.part03.rar  test_config.part04.rar  (+10 more)
doc/engineer/: 001_c++枚举类型.md  002_c++智能指针.md  003_c++异常处理.md  004_头文件和宏定义.md  005_c++_volatile.md  006_c++_atomic.md  007_c++_可变参数模板.md  008_c++_多态性.md  009_c++_lambda表达式.md  01_设计模式.md  1000_standard_1.md  100_设计模式.md  101_安全相关.md  102_内存管理.md  150_类图_设计模式.md  151_软件重构.md  152_gtest使用.md  152_装饰器.md  186_ddd.md  200_proto&flatc库使用.md  200_protobuf_flatc库使用.md  9000_java代码.md  C-standard-5.1.z01  C-standard-5.1.z02  C-standard-5.1.z03  C-standard-5.1.z04  C-standard-5.1.z05  C-standard-5.1.z06  C-standard-5.1.z07  C-standard-5.1.z08  C-standard-5.1.z09  C-standard-5.1.z10  C-standard-5.1.z11  C-standard-5.1.z12  C-standard-5.1.z13  C-standard-5.1.z14  C-standard-5.1.z15  C-standard-5.1.z16  C-standard-5.1.z17  C-standard-5.1.z18  (+80 more)
doc/env_tools/: 01_c++_with_vscode.md
doc/es/: DSL查询要点.md
doc/note/: 00_job_search_project.md  00_技术经验管理.md  02_fx.md  openclaw安装使用
doc/patent/: 01_patent_idea.md
doc/retrival&Ai/: 20210910_BM25.md
doc/retrival&Ai/es/: DSL查询要点.md
doc/retrival_ai/: 20210910_BM25.md
doc/retrival_ai/es/: 00_ES使用调研和安装配置.md  00_ES调研和安装使用.md  01_ES使用调研.md  01_ES使用调研和安装配置.md  01_ElasticSearch讲稿大纲.md  02_ES基本操作.md  02_ES安装和配置.md  02_ES常用基本操作.md  03_DSL查询要点.md  03_DSL查询要点_ref.md  03_ES基本查询总结.md  03_ES查询要点_ref.md  03_ElasticSearch讲稿大纲_ref.md  04_nested使用调研.md  05_es中的分词器.md  06_similarity_model.md  06_similarity_model_调研.md  07_minimum_should_match.md  08_ES搜索JavaApi使用.md  09_ES的mapping设计.md  100_es_css_使用.md  10_ES的开发优化建议.md
doc/standard/: 01_Name.cpp  01_name_standard.cpp
doc/work/: 00_搜索广告术语.md  01_搜索项目经验.md  20210909_KG开发参考.md
file/: online_res  test_res
src/: tinyUtil.cpp
src/cpp/: algorithm_use.cpp  c_read_write.cpp  charaters_use_test.cpp  cmdOption.cpp  cmd_option.cpp  cmpare_file_use.cpp  com_use.cpp  cpp_read_write.cpp  curl_mapbox.cpp  data_type_covert.cpp  design_model.cpp  macro_study.cpp  math_use.cpp  mbr_judge.c  mem_use.cpp  ml_use.cpp  new_feature_c11_use.cpp  read_write.cpp  regex_test.cpp  rtti_use.cpp  similarity_cal.cpp  smart_pointer_use.cpp  stl_use.cpp  string_using.cpp  string_using_2.cpp  template_use.cpp  thread_use_demo.cpp  time_use.cpp
src/inc/: cmd_option.h  com_use.h  curl_mapbox.h  design_model.h  design_pattern.h  macro_study.h  mbr_judge.h  rtti_use.h  stl_use.h  string_using.h  thread_use_demo.h  time_cal.h
src/include/: CmdOption.h  cmd_option.h
src/leetcode/: CMakeLists.txt  LeetcodeMain.cpp
src/leetcode/cpp/: 01_EditDistance.cpp  02_Lcs.cpp  138.复制带随机指针的链表.cpp  141.环形链表.cpp  142.环形链表-ii.cpp  19.删除链表的倒数第n个节点.cpp  2.两数相加.cpp  208.实现-trie-前缀树.cpp  25.k-个一组翻转链表.cpp  88.合并两个有序数组.cpp  94.二叉树的中序遍历.cpp
src/leetcode/cpp/chapater_nine/: basic_2_1_binary_search.cpp  basic_2_2_rotated_array.cpp  basic_3_binary_tree_divide_conquer.cpp  basic_4_bfs.cpp  basic_5_dfs.cpp  basic_6_array.cpp  basic_6_list.cpp  basic_8_hash_heap.cpp  basic_9_dp.cpp  chapater_nine.h
src/leetcode/cpp/leetcode_my/: 000_355_design_tiwtter.cpp  000_boat_ticket_system.cpp  000_design_disk_system.cpp  000_exam_1119_1.cpp  000_exam_1217_0 copy.cpp  000_exam_1217_0.cpp  000_exam_1224_0.cpp  000_exam_1224_2.cpp  000_max_free_memory.cpp  000_max_longest_palindrome.cpp  000_max_persons_limits.cpp  000_middle_autumn_gift.cpp  000_robot_walk.cpp  000_seat_manager_system.cpp  000_shortest_dist_jizhan.cpp  000_topk_word.cpp  001_000_328_list_rerank.cpp  001_103_zigzag_level_order.cpp  001_134_can_complete_circuit.cpp  001_214_shortest_palindrome.cpp  001_220_duplicate_nearby_elem.cpp  001_51_N_queens.cpp  001_74_search_matrix.cpp  002_000_min_max_server_load.cpp  002_240_2d_matrix.cpp  002_33_rotated_array.cpp  002_34_position_in_array.cpp  002_81_rotated_array_2.cpp  003_lintcode_974_01matrix.cpp  004_155_min_stack.cpp  004_239_max_slide_window.cpp  004_363_k_rectangle.cpp  004_42_rain_trap.cpp  004_503_next_greater_elem.cpp  004_739_daily_temprature.cpp  004_84_largest_rectangle_area.cpp  004_85_largest_rectangle_area_v2.cpp  004_901_max_width_ramp.cpp  004_901_stock_spanner.cpp  004_largest_rectangle_area.cpp  (+93 more)
src/leetcode/inc/: 01_all.h
src/primer/: CMakeLists.txt  LeetcodeMain.cpp  PrimerMain.cpp
src/primer/cpp/: 1.cpp  10.cpp  10_seq_container.cpp  10_test_bind.cpp  11_union_container.cpp  12_dynamic_meomory.cpp  12_text_query.cpp  13.cpp  13_message_strvec.cpp  14.cpp  15.cpp  15_textquery_example.cpp  2_cplus_basic.cpp  3.cpp  3_hex_to_dec.cpp  3_string_vector_array.cpp  4.cpp  5_sentence.cpp  6_function.cpp  7_class.cpp  8_io_library.cpp  9_seq_container.cpp  primer.cpp
src/primer/inc/: 1.h  13.h  15_textquery_example.h  2.h  3.h  7.h  all.hpp  message.h  sales_data.h  str_vec.h  text_query.h
(+92 files in other folders)
